@@ -25,8 +25,10 @@
 *.lib
 
 # Executables
-*.exe
-*.out
+semver.exe
+semver_test.exe
+semver.out
+semver_test.out
 *.app
 
 # source insight files
@@ -41,4 +43,8 @@ semver.PRI
 semver.WK3
 semver.PS
 semver.SearchResults
+
+# work folders
+objs/
+output/
 
