@@ -16,6 +16,13 @@ These steps would be done to release a software normally
 **SemVer** creates version head file, increases version and appends the version to a file name.  
 The version format defined in [semver.org](http://semver.org).  
 
+## Build from code
+
+There are prebuild binarise in folder bin. You can try to use them directly. 
+
+If you want to build it from code. GCC is required to be installed. Mingw, Cygwin or native Linux is workable.
+
+Run 'make' to build the executable binary. Run 'make check' to run the test.
 
 ## Usage
 
