@@ -1,2 +1,2 @@
-lcov --directory objs --capture --output-file app.info
-genhtml --output-directory output --title "SemVer" app.info
+lcov --directory objs --capture --output-file objs/app.info
+genhtml --output-directory output --title "SemVer" objs/app.info
