@@ -1,0 +1,4 @@
+make clean
+make
+./semver.out -asemver.out src/version.h
+mv semver_*.out bin/
